--- a/plugins/mock/CMakeLists.txt
+++ b/plugins/mock/CMakeLists.txt
@@ -12,9 +12,10 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/../package-plugin.sh.in
 add_library(ucamock SHARED
             uca-mock-camera.c)
 
-target_link_libraries(ucamock uca ${UCA_DEPS})
+target_link_libraries(ucamock PUBLIC uca)
 if (NOT WIN32)
-    target_link_libraries(ucamock m)
+    # Link the math library on platforms that need it
+    target_link_libraries(ucamock PUBLIC m)
 endif()
 
 install(TARGETS ucamock
