--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -1,2 +1,7 @@
-#add_subdirectory(gui)
-add_subdirectory(tools)
+if (WITH_GUI)
+	add_subdirectory(gui)
+endif()
+
+if (WITH_TOOLS)
+	add_subdirectory(tools)
+endif()
