Added some more options to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ if (UCA_CONAN)
     # These are not supported with conan
     set(WITH_PYTHON_MULTITHREADING OFF)
     set(WITH_GIR OFF)
-    set(WITH_GUI OFF)
+    set(WITH_GUI OFF) # This does not work on windows
     set(WITH_TOOLS ON)
     set(UCA_DEPS CONAN_PKG::glib)
     set(LIBTIFF CONAN_PKG::libtiff)
@@ -21,6 +21,8 @@ else()
     option(WITH_PYTHON_MULTITHREADING "Enable Python multithreading support" ON)
     option(WITH_GIR "Build introspection files" ON)
     option(WITH_TIFF "Support loading tiff files" ON)
+    option(WITH_GUI "Build the GUI tools" ON)
+    option(WITH_TOOLS "Build the CLI tools" ON)
     message(STATUS "Using pkg-config")
     find_package(PkgConfig)
     find_program(GLIB2_MKENUMS glib-mkenums REQUIRED)
