Disable introspection when building with apt

--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           mkdir build
           cd build
-          cmake ..
+          cmake .. -DWITH_GIR=OFF
           make
           sudo make install
       - name: run test-mock
