--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -15,10 +15,10 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - name: Set up ubuntu ${{ matrix.os }}
         run: |
-          sudo apt install -y libglib2.0-dev cmake gcc gobject-introspection libtiff-dev
+          sudo apt install -y libglib2.0-dev cmake gcc gobject-introspection libtiff-dev libgtk2.0-dev
       - name: build
         run: |
           mkdir build
