--- a/plugins/CMakeLists.txt
+++ b/plugins/CMakeLists.txt
@@ -3,11 +3,11 @@ set(UCA_CONFIGDIR "${CMAKE_CURRENT_BINARY_DIR}/../src")
 add_subdirectory(mock)
 add_subdirectory(file)
 
-message("-- Building the following plugins:")
+message(STATUS "Building the following plugins:")
 set(_plugins "mock;file")
 
-foreach(_target ${_plugins})
+foreach(_target IN LISTS _plugins)
     if (TARGET "uca${_target}")
-        message("--  ${_target}")
+        message(STATUS "  ${_target}")
     endif()
 endforeach()
