--- a/bin/tools/CMakeLists.txt
+++ b/bin/tools/CMakeLists.txt
@@ -1,9 +1,5 @@
-#{{{ Variables
-set(libs uca)
-#}}}
 #{{{ Configure
 
-list(APPEND libs ${LIBTIFF})
 
 configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
                ${CMAKE_CURRENT_BINARY_DIR}/config.h)
@@ -12,15 +8,12 @@ configure_file(${CMAKE_CURRENT_SOURCE_DIR}/config.h.in
 include_directories(${CMAKE_CURRENT_BINARY_DIR}
                     ${CMAKE_CURRENT_SOURCE_DIR})
 
-set(BINARIES "benchmark" "gen-doc" "info")
+set(BINARIES "benchmark" "gen-doc" "info" "grab")
 
 foreach (BINARY ${BINARIES})
     add_executable(uca-${BINARY} ${BINARY}.c common.c)
-    target_link_libraries(uca-${BINARY} PUBLIC ${libs})
+    target_link_libraries(uca-${BINARY} PUBLIC uca TIFF::TIFF)
 endforeach ()
-
-add_executable(uca-grab grab.c common.c)
-target_link_libraries(uca-grab PUBLIC ${libs})
 
 if (GNU)
   target_link_libraries(uca-grab PUBLIC m)
