--- a/.github/workflows/conan.yml
+++ b/.github/workflows/conan.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ubuntu-22.04, ubuntu-20.04, windows-2019]
+        os: [windows-2022]
       fail-fast: false
     runs-on: ${{ matrix.os }}
 
@@ -18,18 +18,7 @@ jobs:
       - uses: actions/checkout@v3
       - name: install conan
         uses: turtlebrowser/get-conan@main
-        with:
-          version: 1.59.0
-
-      - name: create profile
-        run: |
-          conan profile new default --detect
-
-      - name: set compiler version
-        if: runner.os == 'Windows'
-        run: |
-          conan profile update settings.compiler.version=16 default
 
       - name: create package
         run: |
-          conan create .
+          conan create -pr:a conan/windows_release . --build=missing
